WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269783
NFKC normalization doesn't work with Latin-1 characters
https://bugs.webkit.org/show_bug.cgi?id=269783
Summary
NFKC normalization doesn't work with Latin-1 characters
Nicolò Ribaudo
Reported
2024-02-20 04:59:45 PST
`"\u{A8}".normalize("NFKC")` should return `"\u{20}\u{308}"`, but it leaves the string unaffected. It works properly with non-Latin-1 characters. I will submit a patch.
Attachments
Add attachment
proposed patch, testcase, etc.
Nicolò Ribaudo
Comment 1
2024-02-20 05:25:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24808
EWS
Comment 2
2024-02-20 12:23:54 PST
Committed
275062@main
(c1a059873be7): <
https://commits.webkit.org/275062@main
> Reviewed commits have been landed. Closing PR #24808 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-20 12:24:14 PST
<
rdar://problem/123328161
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug