Normalize Latin-1 characters in `String#normalize("NFKC")`` https://bugs.webkit.org/show_bug.cgi?id=269783

Reviewed by Alexey Proskuryakov.

The `String.prototype.normalize` implementation has a fast-path in
cases where normalization does not affect the string. It was incorrectly
assumed that NFKC does not affect 8-bit strings. The only normalization
that doesn't affect them is NFC.

* JSTests/es6/String.prototype_methods_String.prototype.normalize.js:
(test):
* Source/JavaScriptCore/runtime/StringPrototype.cpp:
(JSC::normalize):
(JSC::normalizationAffects8Bit): Deleted.

Canonical link: https://commits.webkit.org/275062@main